--- a/RecipeBook/RecipeBook/Content/Site.css
+++ b/RecipeBook/RecipeBook/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.cow_image {
+    max-width: 100%;
+}
+
+
+.col-md-4 h2 {
+    text-align: center;
+}
