added category controller

--- a/RecipeBook/RecipeBook/Views/Shared/_Layout.cshtml
+++ b/RecipeBook/RecipeBook/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Recipes", "About", "Home")</li>
-                    <li>@Html.ActionLink("Profile", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Recipes", "Index", "Recipes")</li>
+                    @*<li>@Html.ActionLink("Profile", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
