--- a/RecipeBook/RecipeBook/Views/Recipes/Index.cshtml
+++ b/RecipeBook/RecipeBook/Views/Recipes/Index.cshtml
@@ -49,7 +49,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @*@Html.ActionLink("Up Vote", "UpVote", new { id=item.Id })*@
         </td>
     </tr>
 }
