--- a/RecipeBook/RecipeBook/Views/Shared/_Layout.cshtml
+++ b/RecipeBook/RecipeBook/Views/Shared/_Layout.cshtml
@@ -29,14 +29,15 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - ReciPeer</p>
-        </footer>
+    <div class="wrapper">
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - ReciPeer</p>
+            </footer>
+        </div>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
