Add jquery, scripts

--- a/RecipeBook/Views/Home/Index.cshtml
+++ b/RecipeBook/Views/Home/Index.cshtml
@@ -10,18 +10,17 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Cuba welcomes you!</h2>
+        <h2 id="welcome">Cuba the Cow Chef Welcomes You</h2>
         <img class="cow_image" src="/img/circle_cow.png" />
-        @*<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>*@
     </div>
     <div class="col-md-4">
-        <h2>Sign In</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Categories</h2>
+        <div id="categoryList"></div>
+        <p><a class="btn btn-default" href="">Placeholder</a></p>
     </div>
     <div class="col-md-4">
-        <h2>View Categories</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Top Rated Recipes</h2>
+        <p>foo</p>
+        <p><a class="btn btn-default" href="">Placeholder</a></p>
     </div>
 </div>
