--- a/RecipeBook/Content/Site.css
+++ b/RecipeBook/Content/Site.css
@@ -22,3 +22,14 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.cow_image {
+    max-width: 100%;
+    margin: auto;
+    display: block;
+}
+
+
+.col-md-4 h2 {
+    text-align: center;
+}
