--- a/RecipeBook/Views/Home/Index.cshtml
+++ b/RecipeBook/Views/Home/Index.cshtml
@@ -19,7 +19,6 @@
     </div>
     <div class="col-md-4">
         <h2>Top Rated Recipes</h2>
-        <p>foo</p>
-        <p><a class="btn btn-default" href="">Placeholder</a></p>
+        <div id="recipeList"></div>
     </div>
 </div>
