--- a/RecipeBook/Content/Site.css
+++ b/RecipeBook/Content/Site.css
@@ -50,3 +50,20 @@ a.category {
 a.category:hover {
     background-color: #245580;
 }
+
+a.recipe {
+    display: block;
+    text-align: center;
+    background-color: #337ab7;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    margin-bottom: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border: 1px solid #cccccc;
+}
+
+a.recipe:hover {
+    background-color: #245580;
+}
