--- a/RecipeBook/Views/Home/Index.cshtml
+++ b/RecipeBook/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>ReciPeer</h1>
+    <h1>Sean's Beans</h1>
     <p class="lead">Stir The Pot...</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
