--- a/RecipeBook/Views/RecipesMVC/Details.cshtml
+++ b/RecipeBook/Views/RecipesMVC/Details.cshtml
@@ -29,6 +29,7 @@
 
         <dt>
             @Html.DisplayNameFor(model => model.ImageLink)
+            <img src="@Model.ImageLink" />
         </dt>
 
         <dd>
