--- a/RecipeBook/Content/Site.css
+++ b/RecipeBook/Content/Site.css
@@ -14,6 +14,9 @@
 */
 .dl-horizontal dt {
     white-space: normal;
+    width: 500px;
+    text-align: center;
+   
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
